@@ -1,0 +1,1 @@
+fix-pipewire-config.py usr/bin/fix-pipewire-config
